--- a/battalla.ui
+++ b/battalla.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>589</width>
-    <height>501</height>
+    <height>542</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -60,11 +60,11 @@
      <x>30</x>
      <y>390</y>
      <width>271</width>
-     <height>91</height>
+     <height>141</height>
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="button_capturar">
+  <widget class="QPushButton" name="button_ataque">
    <property name="geometry">
     <rect>
      <x>310</x>
@@ -206,10 +206,10 @@ border-color:rgb(204, 153, 0);
 padding: 6px;</string>
    </property>
    <property name="text">
-    <string>Capturar</string>
+    <string>Ataque</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="button_lanzarComida">
+  <widget class="QPushButton" name="button_curl">
    <property name="geometry">
     <rect>
      <x>440</x>
@@ -351,14 +351,14 @@ border-color:rgb(204, 153, 0);
 padding: 6px;</string>
    </property>
    <property name="text">
-    <string>Lanzar Comida</string>
+    <string>Curl</string>
    </property>
   </widget>
   <widget class="QPushButton" name="button_huir">
    <property name="geometry">
     <rect>
-     <x>442</x>
-     <y>440</y>
+     <x>440</x>
+     <y>490</y>
      <width>121</width>
      <height>41</height>
     </rect>
@@ -502,8 +502,8 @@ padding: 6px;</string>
   <widget class="QGroupBox" name="group_oponenteInfo">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>80</y>
+     <x>10</x>
+     <y>70</y>
      <width>281</width>
      <height>91</height>
     </rect>
@@ -515,15 +515,15 @@ padding: 6px;</string>
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>20</y>
+      <y>10</y>
       <width>151</width>
-      <height>21</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>Pokemon Solid</family>
-      <pointsize>15</pointsize>
+      <pointsize>17</pointsize>
      </font>
     </property>
     <property name="text">
@@ -540,41 +540,41 @@ padding: 6px;</string>
      </rect>
     </property>
     <property name="value">
-     <number>24</number>
+     <number>0</number>
     </property>
    </widget>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>60</y>
+      <y>50</y>
       <width>31</width>
-      <height>21</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>Pokemon Solid</family>
-      <pointsize>15</pointsize>
+      <pointsize>17</pointsize>
      </font>
     </property>
     <property name="text">
      <string>Hp:</string>
     </property>
    </widget>
-   <widget class="QLabel" name="lable_nivel">
+   <widget class="QLabel" name="lable_oponenteNivel">
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>20</y>
+      <y>9</y>
       <width>61</width>
-      <height>20</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>Pokemon Solid</family>
-      <pointsize>15</pointsize>
+      <pointsize>17</pointsize>
      </font>
     </property>
     <property name="text">
@@ -595,7 +595,7 @@ padding: 6px;</string>
     <enum>Qt::Horizontal</enum>
    </property>
   </widget>
-  <widget class="QPushButton" name="button_lanzarRoca">
+  <widget class="QPushButton" name="button_tackle">
    <property name="geometry">
     <rect>
      <x>310</x>
@@ -737,7 +737,399 @@ border-color:rgb(204, 153, 0);
 padding: 6px;</string>
    </property>
    <property name="text">
-    <string>Lanzar Roca</string>
+    <string>Tackleo</string>
+   </property>
+  </widget>
+  <widget class="QGroupBox" name="group_oponenteInfo_2">
+   <property name="geometry">
+    <rect>
+     <x>300</x>
+     <y>270</y>
+     <width>281</width>
+     <height>91</height>
+    </rect>
+   </property>
+   <property name="title">
+    <string/>
+   </property>
+   <widget class="QLabel" name="lable_usuarioNombre">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>10</y>
+      <width>151</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Pokemon Solid</family>
+      <pointsize>17</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>nombre usuario</string>
+    </property>
+   </widget>
+   <widget class="QProgressBar" name="progress_usuarioHp">
+    <property name="geometry">
+     <rect>
+      <x>47</x>
+      <y>60</y>
+      <width>211</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="value">
+     <number>0</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>50</y>
+      <width>31</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Pokemon Solid</family>
+      <pointsize>17</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Hp:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lable_usuarioNivel">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>9</y>
+      <width>61</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Pokemon Solid</family>
+      <pointsize>17</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Level</string>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QLabel" name="lable_usuarioSprite">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>260</y>
+     <width>92</width>
+     <height>92</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Pokemon Solid</family>
+     <pointsize>15</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>usuario</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="button_habilidad">
+   <property name="geometry">
+    <rect>
+     <x>310</x>
+     <y>490</y>
+     <width>121</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="palette">
+    <palette>
+     <active>
+      <colorrole role="Button">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>204</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="ButtonText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>102</red>
+         <green>102</green>
+         <blue>255</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Base">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>204</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Window">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>204</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </active>
+     <inactive>
+      <colorrole role="Button">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>204</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="ButtonText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>102</red>
+         <green>102</green>
+         <blue>255</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Base">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>204</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Window">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>204</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </inactive>
+     <disabled>
+      <colorrole role="Button">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>204</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="ButtonText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>148</red>
+         <green>148</green>
+         <blue>148</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Base">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>204</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Window">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>204</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </disabled>
+    </palette>
+   </property>
+   <property name="font">
+    <font>
+     <family>Pokemon Solid</family>
+     <pointsize>15</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color:rgb(255, 204, 0);
+border-style: outset;
+border-width: 2px;
+border-radius: 10px;
+border-color:rgb(204, 153, 0);
+padding: 6px;</string>
+   </property>
+   <property name="text">
+    <string>Habilidad</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="button_defensa">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>440</y>
+     <width>121</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="palette">
+    <palette>
+     <active>
+      <colorrole role="Button">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>204</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="ButtonText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>102</red>
+         <green>102</green>
+         <blue>255</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Base">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>204</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Window">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>204</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </active>
+     <inactive>
+      <colorrole role="Button">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>204</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="ButtonText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>102</red>
+         <green>102</green>
+         <blue>255</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Base">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>204</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Window">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>204</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </inactive>
+     <disabled>
+      <colorrole role="Button">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>204</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="ButtonText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>148</red>
+         <green>148</green>
+         <blue>148</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Base">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>204</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Window">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>204</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </disabled>
+    </palette>
+   </property>
+   <property name="font">
+    <font>
+     <family>Pokemon Solid</family>
+     <pointsize>15</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color:rgb(255, 204, 0);
+border-style: outset;
+border-width: 2px;
+border-radius: 10px;
+border-color:rgb(204, 153, 0);
+padding: 6px;</string>
+   </property>
+   <property name="text">
+    <string>Defensa</string>
    </property>
   </widget>
  </widget>
