--- a/loadGame.ui
+++ b/loadGame.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>353</width>
+    <width>342</width>
     <height>392</height>
    </rect>
   </property>
@@ -113,7 +113,7 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>100</x>
      <y>20</y>
      <width>131</width>
      <height>31</height>
@@ -122,7 +122,7 @@
    <property name="font">
     <font>
      <family>Pokemon Solid</family>
-     <pointsize>20</pointsize>
+     <pointsize>25</pointsize>
     </font>
    </property>
    <property name="text">
@@ -132,11 +132,17 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>40</x>
+     <x>20</x>
      <y>70</y>
      <width>291</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Pokemon Solid</family>
+     <pointsize>15</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>Seleccione el Juego que desea cargar:</string>
@@ -148,7 +154,7 @@
      <x>40</x>
      <y>110</y>
      <width>271</width>
-     <height>31</height>
+     <height>41</height>
     </rect>
    </property>
   </widget>
@@ -185,9 +191,9 @@ border-color:rgb(0, 0, 0);</string>
   <widget class="QPushButton" name="button_ok">
    <property name="geometry">
     <rect>
-     <x>180</x>
+     <x>230</x>
      <y>310</y>
-     <width>113</width>
+     <width>91</width>
      <height>61</height>
     </rect>
    </property>
@@ -330,9 +336,9 @@ padding: 6px;</string>
   <widget class="QPushButton" name="button_cancelar">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>20</x>
      <y>310</y>
-     <width>113</width>
+     <width>101</width>
      <height>61</height>
     </rect>
    </property>
@@ -470,6 +476,151 @@ padding: 6px;</string>
    </property>
    <property name="text">
     <string>Cancelar</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="button_eliminar">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>310</y>
+     <width>91</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="palette">
+    <palette>
+     <active>
+      <colorrole role="Button">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>204</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="ButtonText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>102</red>
+         <green>102</green>
+         <blue>255</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Base">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>204</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Window">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>204</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </active>
+     <inactive>
+      <colorrole role="Button">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>204</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="ButtonText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>102</red>
+         <green>102</green>
+         <blue>255</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Base">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>204</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Window">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>204</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </inactive>
+     <disabled>
+      <colorrole role="Button">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>204</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="ButtonText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>148</red>
+         <green>148</green>
+         <blue>148</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Base">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>204</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Window">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>204</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </disabled>
+    </palette>
+   </property>
+   <property name="font">
+    <font>
+     <family>Pokemon Solid</family>
+     <pointsize>17</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color:rgb(255, 204, 0);
+border-style: outset;
+border-width: 2px;
+border-radius: 10px;
+border-color:rgb(204, 153, 0);
+padding: 6px;</string>
+   </property>
+   <property name="text">
+    <string>Eliminar</string>
    </property>
   </widget>
  </widget>
