--- a/newgame.ui
+++ b/newgame.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>768</width>
-    <height>336</height>
+    <width>276</width>
+    <height>411</height>
    </rect>
   </property>
   <property name="palette">
@@ -140,16 +140,16 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>240</x>
+     <x>50</x>
      <y>20</y>
-     <width>251</width>
-     <height>41</height>
+     <width>181</width>
+     <height>51</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Pokemon Solid</family>
-     <pointsize>30</pointsize>
+     <pointsize>25</pointsize>
     </font>
    </property>
    <property name="text">
@@ -162,8 +162,14 @@
      <x>40</x>
      <y>80</y>
      <width>61</width>
-     <height>21</height>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Pokemon Solid</family>
+     <pointsize>16</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>Nombre:</string>
@@ -179,269 +185,11 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" name="label_3">
-   <property name="geometry">
-    <rect>
-     <x>40</x>
-     <y>150</y>
-     <width>81</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Genero:</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_4">
-   <property name="geometry">
-    <rect>
-     <x>260</x>
-     <y>80</y>
-     <width>281</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Haga click sobre el avatar que desea:</string>
-   </property>
-  </widget>
-  <widget class="QGroupBox" name="groupBox">
-   <property name="geometry">
-    <rect>
-     <x>40</x>
-     <y>180</y>
-     <width>151</width>
-     <height>61</height>
-    </rect>
-   </property>
-   <property name="title">
-    <string/>
-   </property>
-   <widget class="QRadioButton" name="rbutton_masculino">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>30</y>
-      <width>102</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Masculino</string>
-    </property>
-    <property name="autoExclusive">
-     <bool>true</bool>
-    </property>
-   </widget>
-   <widget class="QRadioButton" name="rbutton_femenino">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>10</y>
-      <width>102</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Femenino</string>
-    </property>
-   </widget>
-  </widget>
-  <widget class="QPushButton" name="button_avatarf0">
-   <property name="geometry">
-    <rect>
-     <x>250</x>
-     <y>110</y>
-     <width>91</width>
-     <height>81</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="iconSize">
-    <size>
-     <width>200</width>
-     <height>200</height>
-    </size>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="button_avatarm1">
-   <property name="geometry">
-    <rect>
-     <x>350</x>
-     <y>200</y>
-     <width>91</width>
-     <height>81</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="iconSize">
-    <size>
-     <width>200</width>
-     <height>200</height>
-    </size>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="button_avatarf1">
-   <property name="geometry">
-    <rect>
-     <x>350</x>
-     <y>110</y>
-     <width>91</width>
-     <height>81</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="iconSize">
-    <size>
-     <width>200</width>
-     <height>200</height>
-    </size>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="button_avatarm2">
-   <property name="geometry">
-    <rect>
-     <x>450</x>
-     <y>200</y>
-     <width>91</width>
-     <height>81</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="iconSize">
-    <size>
-     <width>200</width>
-     <height>200</height>
-    </size>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="button_avatarm3">
-   <property name="geometry">
-    <rect>
-     <x>550</x>
-     <y>200</y>
-     <width>91</width>
-     <height>81</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="iconSize">
-    <size>
-     <width>200</width>
-     <height>200</height>
-    </size>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="button_avatarm4">
-   <property name="geometry">
-    <rect>
-     <x>650</x>
-     <y>200</y>
-     <width>91</width>
-     <height>81</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="iconSize">
-    <size>
-     <width>200</width>
-     <height>200</height>
-    </size>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="button_avatarf4">
-   <property name="geometry">
-    <rect>
-     <x>650</x>
-     <y>110</y>
-     <width>91</width>
-     <height>81</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="iconSize">
-    <size>
-     <width>200</width>
-     <height>200</height>
-    </size>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="button_avatarf3">
-   <property name="geometry">
-    <rect>
-     <x>550</x>
-     <y>110</y>
-     <width>91</width>
-     <height>81</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="iconSize">
-    <size>
-     <width>200</width>
-     <height>200</height>
-    </size>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="button_avatarf2">
-   <property name="geometry">
-    <rect>
-     <x>450</x>
-     <y>110</y>
-     <width>91</width>
-     <height>81</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="iconSize">
-    <size>
-     <width>200</width>
-     <height>200</height>
-    </size>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="button_avatarm0">
-   <property name="geometry">
-    <rect>
-     <x>250</x>
-     <y>200</y>
-     <width>91</width>
-     <height>81</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="iconSize">
-    <size>
-     <width>200</width>
-     <height>200</height>
-    </size>
-   </property>
-  </widget>
   <widget class="QPushButton" name="button_ok">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>260</y>
+     <x>150</x>
+     <y>320</y>
      <width>91</width>
      <height>61</height>
     </rect>
@@ -586,7 +334,7 @@ padding: 6px;</string>
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>260</y>
+     <y>320</y>
      <width>101</width>
      <height>61</height>
     </rect>
@@ -725,6 +473,44 @@ padding: 6px;</string>
    </property>
    <property name="text">
     <string>Cancelar</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>150</y>
+     <width>61</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Pokemon Solid</family>
+     <pointsize>16</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Avatar:</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="comboBox_avatar">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>180</y>
+     <width>141</width>
+     <height>111</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>92</width>
+     <height>92</height>
+    </size>
    </property>
   </widget>
  </widget>
