--- a/battalla.ui
+++ b/battalla.ui
@@ -22,6 +22,43 @@
      <height>41</height>
     </rect>
    </property>
+   <property name="palette">
+    <palette>
+     <active>
+      <colorrole role="WindowText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>204</red>
+         <green>0</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </active>
+     <inactive>
+      <colorrole role="WindowText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>204</red>
+         <green>0</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </inactive>
+     <disabled>
+      <colorrole role="WindowText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>127</red>
+         <green>127</green>
+         <blue>127</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </disabled>
+    </palette>
+   </property>
    <property name="font">
     <font>
      <family>Pokemon Solid</family>
@@ -35,8 +72,8 @@
   <widget class="QLabel" name="lable_oponenteSprite">
    <property name="geometry">
     <rect>
-     <x>390</x>
-     <y>140</y>
+     <x>350</x>
+     <y>110</y>
      <width>92</width>
      <height>92</height>
     </rect>
@@ -826,8 +863,8 @@ padding: 6px;</string>
   <widget class="QLabel" name="lable_usuarioSprite">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>260</y>
+     <x>160</x>
+     <y>250</y>
      <width>92</width>
      <height>92</height>
     </rect>
