--- a/loadpokemon.ui
+++ b/loadpokemon.ui
@@ -22,6 +22,70 @@
      <height>51</height>
     </rect>
    </property>
+   <property name="palette">
+    <palette>
+     <active>
+      <colorrole role="WindowText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>204</red>
+         <green>0</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Text">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>0</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </active>
+     <inactive>
+      <colorrole role="WindowText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>204</red>
+         <green>0</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Text">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>0</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </inactive>
+     <disabled>
+      <colorrole role="WindowText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>127</red>
+         <green>127</green>
+         <blue>127</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Text">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>127</red>
+         <green>127</green>
+         <blue>127</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </disabled>
+    </palette>
+   </property>
    <property name="font">
     <font>
      <family>Pokemon Solid</family>
@@ -180,9 +244,9 @@ padding: 6px;</string>
   <widget class="QComboBox" name="combo_usuarioPokemon">
    <property name="geometry">
     <rect>
-     <x>330</x>
+     <x>310</x>
      <y>120</y>
-     <width>251</width>
+     <width>281</width>
      <height>51</height>
     </rect>
    </property>
@@ -598,9 +662,9 @@ padding: 6px;</string>
    </property>
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>10</x>
      <y>120</y>
-     <width>251</width>
+     <width>281</width>
      <height>51</height>
     </rect>
    </property>
