--- a/newgame.ui
+++ b/newgame.ui
@@ -146,6 +146,43 @@
      <height>51</height>
     </rect>
    </property>
+   <property name="palette">
+    <palette>
+     <active>
+      <colorrole role="WindowText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>204</red>
+         <green>0</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </active>
+     <inactive>
+      <colorrole role="WindowText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>204</red>
+         <green>0</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </inactive>
+     <disabled>
+      <colorrole role="WindowText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>127</red>
+         <green>127</green>
+         <blue>127</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </disabled>
+    </palette>
+   </property>
    <property name="font">
     <font>
      <family>Pokemon Solid</family>
@@ -161,14 +198,14 @@
     <rect>
      <x>40</x>
      <y>80</y>
-     <width>61</width>
+     <width>81</width>
      <height>31</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Pokemon Solid</family>
-     <pointsize>16</pointsize>
+     <pointsize>17</pointsize>
     </font>
    </property>
    <property name="text">
@@ -180,9 +217,14 @@
     <rect>
      <x>40</x>
      <y>110</y>
-     <width>171</width>
-     <height>21</height>
+     <width>191</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>17</pointsize>
+    </font>
    </property>
   </widget>
   <widget class="QPushButton" name="button_ok">
@@ -479,15 +521,15 @@ padding: 6px;</string>
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>150</y>
-     <width>61</width>
-     <height>31</height>
+     <y>160</y>
+     <width>71</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Pokemon Solid</family>
-     <pointsize>16</pointsize>
+     <pointsize>17</pointsize>
     </font>
    </property>
    <property name="text">
@@ -497,8 +539,8 @@ padding: 6px;</string>
   <widget class="QComboBox" name="comboBox_avatar">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>180</y>
+     <x>70</x>
+     <y>190</y>
      <width>141</width>
      <height>111</height>
     </rect>
